<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audio Phrasebook</string>
    <string name="action_settings">Settings</string>
    <string name="main_start_eng">Start</string>
    <string name="main_options_eng">Options</string>
    <string name="main_exit_eng">Exit</string>
    <string name="hello_world">PLACEHOLDER</string>
    
    <string name="title_activity_category_menu">Phrase Categories:</string>
    <string name="greetings_menu_eng">Greetings</string>
    <string name="directions_menu_eng">Directions</string>
    <string name="diningout_menu_eng">Dining Out</string>
    <string name="shopping_menu_eng">Shopping</string>
    <string name="back_menu_eng">Back</string>
    <string name="main_menu_eng">Main Menu</string>
    
    <string name="title_activity_greeting_phrases">Greetings:</string>
    <string name="greeting_phrase_one_eng">Hello.</string>
    <string name="greeting_phrase_two_eng">How are you?</string>
    <string name="greeting_phrase_three_eng">I\'m fine, thank you.</string>
    <string name="greeting_phrase_four_eng">What\'s your name?</string>
    <string name="greeting_phrase_five_eng">My name is Mr. Smith.</string>
    <string name="greeting_phrase_six_eng">It\'s nice to meet you.</string>
    <string name="greeting_phrase_seven_eng">Goodbye.</string>
    
    <string name="title_activity_direction_phrases">Directions:</string>
    <string name="direction_phrase_one_eng">Where is the bus stop?</string>
    <string name="direction_phrase_two_eng">How do I get to the museum?</string>
    <string name="direction_phrase_three_eng">Go straight.</string>
    <string name="direction_phrase_four_eng">Turn right.</string>
    <string name="direction_phrase_five_eng">Turn left.</string>
    
    <string name="title_activity_diningout_phrases">Dining Out:</string>
    <string name="diningout_phrase_one_eng">Can I have the menu, please?</string>
    <string name="diningout_phrase_two_eng">What would you like to drink?</string>
    <string name="diningout_phrase_three_eng">I would like a glass of wine.</string>
    <string name="diningout_phrase_four_eng">What can I get you?</string>
    <string name="diningout_phrase_five_eng">I\'d like the steak.</string>
    <string name="diningout_phrase_six_eng">Check, please.</string>
    
    <string name="title_activity_shopping_phrases">Shopping:</string>
    <string name="shopping_phrase_one_eng">How much does this cost?</string>
    <string name="shopping_phrase_two_eng">I\'d like to try this on.</string>
    <string name="shopping_phrase_three_eng">Do you have this shirt in green?</string>
    <string name="shopping_phrase_four_eng">What size are you?</string>
    <string name="shopping_phrase_five_eng">I\'m size large.</string>
    
    <string name="title_activity_options_menu">Options:</string>
    <string name="greeting_phrase_one_kor">안녕하세요.</string>
    <string name="greeting_phrase_two_kor">잘 지내세요?</string>
    <string name="greeting_phrase_three_kor">괜찮습니다. 감사합니다.</string>
    <string name="greeting_phrase_four_kor">성함이 무엇입니까?</string>
    <string name="greeting_phrase_six_kor">만나서 반갑습니다.</string>
    <string name="greeting_phrase_five_kor">제 이름은 스미스 입니다.</string>
    <string name="greeting_phrase_seven_kor">안녕히 가세요.</string>
    <string name="back_menu_kor">뒤로가기</string>
    <string name="main_menu_kor">메인메뉴</string>
    <string name="greetings_menu_kor">인사</string>
    <string name="directions_menu_kor">방향</string>
    <string name="diningout_menu_kor">외식</string>
    <string name="shopping_menu_kor">쇼핑</string>
    <string name="main_start_kor">시작</string>
    <string name="main_options_kor">옵션</string>
    <string name="main_exit_kor">나가기</string>
    <string name="direction_phrase_one_kor">버스정류장이 어디입니까?</string>
    <string name="direction_phrase_two_kor">박물관은 어떻게 가야 합니까?</string>
    <string name="direction_phrase_three_kor">직진하십시오.</string>
    <string name="direction_phrase_four_kor">오른쪽으로 꺾으세요.</string>
    <string name="direction_phrase_five_kor">왼쪽으로 꺾으세요.</string>
    <string name="diningout_phrase_one_kor">메뉴판좀 주시겠습니까?</string>
    <string name="diningout_phrase_two_kor">무엇을 마시고 싶습니까?</string>
    <string name="diningout_phrase_three_kor">와인으로 하겠습니다.</string>
    <string name="diningout_phrase_four_kor">어떤 것으로 하시겠습니까?</string>
    <string name="diningout_phrase_five_kor">스테이크로 하겠습니다.</string>
    <string name="diningout_phrase_six_kor">계산서를 주십시오.</string>
    <string name="shopping_phrase_one_kor">그것은 가격이 얼마입니까?</string>
    <string name="shopping_phrase_two_kor">이것을 입어보고 싶습니다.</string>
    <string name="shopping_phrase_three_kor">이 셔츠 초록색으로 있습니까?</string>
    <string name="shopping_phrase_four_kor">당신의 사이즈가 무엇입니까?</string>
    <string name="shopping_phrase_five_kor">제 사이즈는 라지입니다.</string>

</resources>
