<LinearLayout android:id="@+id/LinearLayout1" 
	android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:gravity="center_horizontal|center_vertical" 
    android:orientation="vertical" 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools" 
    android:paddingBottom="@dimen/activity_vertical_margin" 
    android:paddingLeft="@dimen/activity_horizontal_margin" 
    android:paddingRight="@dimen/activity_horizontal_margin" 
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context="com.example.audiophrasebook.MainActivity" 
    xmlns:app="http://schemas.android.com/apk/res/com.example.audiophrasebook">
    
    <Button android:id="@+id/button1" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/main_start_kor" 
    	android:onClick="transitionCategoryMenu"/>
    	
    <Button android:id="@+id/button2" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/main_options_kor"
    	android:onClick="transitionOptionsMenu"/>
    	
    <Button android:id="@+id/button3" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/main_exit_kor"
    	android:onClick="transitionExitApplication"/>

</LinearLayout>
